[tool.poetry]
name = "coding-session-2"
version = "0.1.0"
description = "My awesome package setup for our coding session"
authors = ["Luuk Weiss <l.weiss@saxion.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lpminimk3 = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
